--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html {
   background-color: darkgray;
   border-bottom: 3px solid black;
   font-size: 60px;
-  font-family: monospace;
+  font-family: 'DS-Digital', monospace;
   display: flex;
   align-items: flex-end;
   flex-direction: column;
@@ -28,7 +28,7 @@ html {
 #clear {
   grid-column: span 2;
 }
-.button {
+button {
   border: 1px solid black;
   border-radius: 30px;
   background-color: lightgray;
@@ -36,4 +36,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+#display-eetext {
+  font-size: 20px;
 }
