--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ html {
   margin: auto;
   justify-content: center;
   align-content: center;
-  border: 5px solid black;
-  border-radius: 10px;
-  background-color: black;
+  border: 5px solid #292826;
+  border-radius: 5px;
+  background-color: #292826;
   display: grid;
   grid-template-columns: repeat(4, 100px);
   grid-template-rows: minmax(120px, auto) repeat(5, 100px);
@@ -18,7 +18,6 @@ html {
 .display {
   grid-column: 1 / -1;
   background-color: darkgray;
-  border-bottom: 3px solid black;
   font-size: 60px;
   font-family: 'DS-Digital', monospace;
   display: flex;
@@ -29,14 +28,30 @@ html {
 #clear {
   grid-column: span 2;
 }
-button {
+#clear, #backspace {
+  background-color: #f53333;
   border: 1px solid black;
-  border-radius: 30px;
-  background-color: lightgray;
+}
+#equals {
+  background-color: #f57a33
+}
+button {
+  margin: 5px;
+  border: 1px solid black;
+  border-radius: 2px;
+  background-color: #d1d1b6;
   font-size: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+button:active {
+  transform: translateY(1px);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  background-color: #e0e0e0;
+}
+button:hover {
+  cursor: pointer;
 }
 #display-eetext {
   font-size: 20px;
